#25 Fixed project's alignment.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -34,7 +34,7 @@ body {
 }
 
 .card-block-button {
-  position: relative;
+  position: absolute;
   bottom: 0px;
   right: 0px;
 }
